dataset1235/2025-2/2947369575/users/1169719625/executions/1003782500_1462915504.log
== RUN (2025-08-27 18:08:35)
-- CODE: 
import math

lado = float(input("Digite o comprimento do lado do pentagono: "))

apotema = lado / (2 * math.tan(math.pi / 5))

area = (5 / 2) * lado *apotema 

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o comprimento do lado do pentagono: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o comprimento do lado do pentagono: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o comprimento do lado do pentagono: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o comprimento do lado do pentagono: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o comprimento do lado do pentagono: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o comprimento do lado do pentagono: 172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 18:08:36)
-- CODE: 
import math

lado = float(input("Digite o comprimento do lado do pentagono: "))

apotema = lado / (2 * math.tan(math.pi / 5))

area = (5 / 2) * lado *apotema 

print(round(area, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o comprimento do lado do pentagono: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o comprimento do lado do pentagono: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o comprimento do lado do pentagono: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o comprimento do lado do pentagono: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o comprimento do lado do pentagono: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o comprimento do lado do pentagono: 172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:07:01)
-- CODE: 
from math import *

lado = float(input("Digite o comprimento do lado do pentagono: "))

apotema = lado / (2 * math.tan(math.pi / 5))

area = (5 / 2) * lado *apotema 

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 18:07:04)
-- CODE: 
from math import *

lado = float(input("Digite o comprimento do lado do pentagono: "))

apotema = lado / (2 * math.tan(math.pi / 5))

area = (5 / 2) * lado *apotema 

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:07:07)
-- CODE: 
from math import *

lado = float(input("Digite o comprimento do lado do pentagono: "))

apotema = lado / (2 * math.tan(math.pi / 5))

area = (5 / 2) * lado *apotema 

print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    apotema = lado / (2 * math.tan(math.pi / 5))
                          ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
